first big commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 composer.phar
+composer.lock
 vendor/
+.git/
+.idea/
+.DS_Store
+Mashery-PHP-API.sublime-project
+Mashery-PHP-API.sublime-workspace
 
 # Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
