--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "authors": [
         {
             "name": "AlexanderC",
-            "email": "alexander.moldova@gmail.com"
+            "email": "self@alexanderc.me"
         }
     ],
     "minimum-stability": "stable",
